--- a/files/etc/AdGuardHome/AdGuardHome.yaml
+++ b/files/etc/AdGuardHome/AdGuardHome.yaml
@@ -1,5 +1,6 @@
-bind_host: 0.0.0.0
-bind_port: 3000
+http:
+  address: 0.0.0.0:3000
+  session_ttl: 720h
 users:
   - name: admin
     password: $2a$05$A3/0jPaKLBt5jXpasgnKd.aS3lnsJLQepnz7aYbnttju6TXcCSCmy
@@ -9,7 +10,6 @@ http_proxy: ""
 language: ""
 theme: auto
 debug_pprof: false
-web_session_ttl: 720
 dns:
   bind_hosts:
     - 0.0.0.0
@@ -20,6 +20,7 @@ dns:
   blocking_ipv4: ""
   blocking_ipv6: ""
   blocked_response_ttl: 10
+  protection_disabled_until: null
   parental_block_host: family-block.dns.adguard.com
   safebrowsing_block_host: standard-block.dns.adguard.com
   ratelimit: 0
@@ -58,17 +59,28 @@ dns:
   handle_ddr: true
   ipset: []
   ipset_file: ""
+  bootstrap_prefer_ipv6: false
   filtering_enabled: true
   filters_update_interval: 12
   parental_enabled: false
-  safesearch_enabled: false
   safebrowsing_enabled: false
   safebrowsing_cache_size: 1048576
   safesearch_cache_size: 1048576
   parental_cache_size: 1048576
   cache_time: 30
+  safe_search:
+    enabled: false
+    bing: true
+    duckduckgo: true
+    google: true
+    pixabay: true
+    yandex: true
+    youtube: true
   rewrites: []
-  blocked_services: []
+  blocked_services:
+    schedule:
+      time_zone: Local
+    ids: []
   upstream_timeout: 10s
   private_networks: []
   use_private_ptr_resolvers: true
@@ -100,7 +112,7 @@ querylog:
   ignored: []
 statistics:
   enabled: true
-  interval: 7
+  interval: 168h
   ignored: []
 filters:
   - enabled: true
@@ -113,7 +125,7 @@ filters:
     id: 2
   - enabled: true
     url: https://anti-ad.net/easylist.txt
-    name: "CHN: anti-AD"
+    name: 'CHN: anti-AD'
     id: 1631003442
   - enabled: true
     url: https://easylist-downloads.adblockplus.org/easylist.txt
@@ -166,15 +178,16 @@ clients:
     dhcp: true
     hosts: true
   persistent: []
-log_file: ""
-log_max_backups: 0
-log_max_size: 100
-log_max_age: 3
-log_compress: false
-log_localtime: false
-verbose: false
+log:
+  file: ""
+  max_backups: 0
+  max_size: 100
+  max_age: 3
+  compress: false
+  local_time: false
+  verbose: false
 os:
   group: ""
   user: ""
   rlimit_nofile: 0
-schema_version: 17
+schema_version: 24
