--- a/files/etc/mosdns/config_custom.yaml
+++ b/files/etc/mosdns/config_custom.yaml
@@ -10,7 +10,7 @@ plugins:
   - tag: country
     type: mmdb
     args:
-      file: /etc/mosdns/rule/Country.mmdb"
+      file: "/etc/mosdns/rule/Country.mmdb"
 
   # cn ip
   - tag: whitelist
@@ -69,6 +69,7 @@ plugins:
       upstreams:
         - tag: Ali_dot
           addr: "tls://223.5.5.5"
+          enable_pipeline: true
         - tag: DNSPod_dot
           addr: "tls://120.53.53.53"
           enable_pipeline: true
